--- a/.jshintrc
+++ b/.jshintrc
@@ -34,6 +34,7 @@
     "onevar": false,
     "white": true,
     "globals": {
+        "_": false,
         "describe": false,
         "it": false,
         "before": false,
