--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "name": "Gilad Peleg",
     "email": "giladp007@gmail.com"
   },
+  "files": [
+    "license.md",
+    "index.js"
+  ],
   "engines": {
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "esprima": "^1.1.1",
+    "esprima": "^1.2.2",
     "estraverse": "^1.5.0"
   },
   "devDependencies": {
-    "mocha": "*",
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "mocha": "^1.20.0"
   },
   "license": "MIT"
 }
